syntax = "proto3";

package protobuf;

option go_package = "./";

import "objects.proto";

// API: SystemCall
//-----------------------------------------------------------
message SystemCallRequest {
    string command = 0x00000001;
}

message SystemCallResult {
}

// API: Echo
//-----------------------------------------------------------
message EchoRequest {
    Document document = 0x00000001;
}

message EchoResult {
    Document document = 0x00000001;
}

// API: Signup
//-----------------------------------------------------------
message SignupRequest {
    string username = 0x00000001;
    string email = 0x00000002;
    string password = 0x00000003;
}

message SignupResult {
    string token = 0x00000001;
    string code = 0x00000002;
}

// API: Verify
//-----------------------------------------------------------
message VerifyRequest {
    string email = 0x00000001;
    string token = 0x00000002;
    string code = 0x00000003;
}

message VerifyResult {
    string token = 0x00000001;
}

// API: Login
//-----------------------------------------------------------
message LoginRequest {
    string email = 0x00000001;
    string password = 0x00000002;
}

message LoginResult {
    string username = 0x00000001;
    string token = 0x00000002;
}

// API: GetProfileByUser
//-----------------------------------------------------------
message GetProfileByUserRequest {
}

message GetProfileByUserResult {
    string username = 0x00000001;
    string displayName = 0x00000002;
    string avatar = 0x00000003;
    string banner = 0x00000004;
    string summary = 0x00000005;
    string github = 0x00000006;
}

// API: UpdateProfileByUser
//-----------------------------------------------------------
message UpdateProfileByUserRequest {
    string displayName = 0x00000001;
    string avatar = 0x00000002;
    string banner = 0x00000003;
    string summary = 0x00000004;
    string github = 0x00000005;
}

message UpdateProfileByUserResult {
    string displayName = 0x00000001;
    string avatar = 0x00000002;
    string banner = 0x00000003;
    string summary = 0x00000004;
    string github = 0x00000005;
}

// API: Logout
//-----------------------------------------------------------
message LogoutRequest {
}

message LogoutResult {
}

//-----------------------------------------------------------
